04/01/2023 (03:48 PM)

>   Products added to cart after checking for size. If size and productId both doesnot exist-
    togethor, create a new object with same productId and New size and insert into products array.

>   User can add product to cart from View Product Details page.

04/01/2023 (04:39 PM)

>   An error in user helpers rectified.

>   Changed the POST request from the Product Details page from "Form" to AJAX.
