@@ -15,7 +15,11 @@ var app = express();
 // view engine setup
 app.set('views', path.join(__dirname, 'views'));
 app.set('view engine', 'hbs');
-app.engine('hbs',hbs.engine({extname:'hbs',defaultLayout:'layout',layoutsDir:(__dirname+'/views/layout/'),partialsDir:(__dirname+'/views/partials/')}));
+app.engine('hbs',hbs.engine({extname:'hbs',defaultLayout:'layout',layoutsDir:(__dirname+'/views/layout/'),partialsDir:(__dirname+'/views/partials/'),helpers: {
+  inc: function (value, options) {
+      return parseInt(value) + 1;
+    }
+}}));
 
 app.use(logger('dev'));
 app.use(express.json());
