@@ -2,48 +2,58 @@
     <div class="small-container">
       <table>
         <tr>
+          <th>#</th>
           <th>Product</th>
           <th>Size</th>
           <th>Quantity</th>
           <th>Subtotal</th>
         </tr>
+
+        {{#each products}}
+
         <tr>
           <td>
+            {{inc @index}}
+          </td>
+          <td>
             <div class="cart-info">
-              <img src="/productImages/f2.jpg" alt="Tshirt" />
+              <img style="width: 110px; height: 147.5px;" src="/productImages/{{this.product.image1}}" alt="Tshirt" />
               <div>
-                <p>Orange Printed Tshirt</p>
-                <small>Price: $78.00</small>
+                <p>{{this.product.productName}}</p>
+                <small>&#8377 {{this.product.productPrice}}</small>
                 <br />
                 <a href="#" class="bg-danger text-white px-2 py-1 rounded">Remove</a>
               </div>
             </div>
           </td>
           <td>
-            M
+            {{this.size}}
           </td>
-          <td> <a href="" class="btn-danger px-2 py-1 rounded">-</a>
-                    <input type="number" value="1" disabled />
-               <a href="" class="btn-success px-2 py-1 rounded">+</a>
+          <td>
+            <a href="" class="btn-danger px-2 py-1 rounded">-</a>
+            <input type="number" value="{{this.quantity}}" disabled />
+            <a href="" class="btn-success px-2 py-1 rounded">+</a>
           </td>
-          <td>$78.00</td>
+          <td>&#8377 {{this.subTotal}}</td>
         </tr>
         
+        {{/each}}
+
       </table>
 
       <div class="total-price">
         <table>
           <tr>
-            <td>Subtotal</td>
-            <td>$234.00</td>
+            <td>Sum Total</td>
+            <td>&#8377 {{total.sumTotal}}</td>
           </tr>
           <tr>
-            <td>Tax</td>
-            <td>$35.00</td>
+            <td>Tax (GST @ 12%)</td>
+            <td>&#8377 {{total.taxAmount}}</td>
           </tr>
           <tr>
-            <td>Total</td>
-            <td>$269.00</td>
+            <td>Grand Total</td>
+            <td>&#8377 {{total.grandTotal}}</td>
           </tr>
         </table>
       </div>
